@@ -5,7 +5,8 @@
 
   C-API changes:
     - avt_set_title: no automatic charset conversion
-    - new functions: avt_menu, avt_palette_size
+    - new functions: avt_wide_copyright, avt_wide_license,
+      avt_menu, avt_palette_size
     - avtaddons:
       - avta_file_selection and avta_filter have a new parameter "data",
         which is passed along
